Major version bump
-------------------

Fixed a bug on V2 CHAD construction, affects absolute colorimetric intent